[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rupture_explorer"
authors = [{ name = "QuakeCoRE" }]
description = "View NSHM rupture scenarios and export them into the new workflow"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    'branca',
    'qcore @ git+https://github.com/ucgmsim/qcore',
    'source_modelling @ git+https://github.com/ucgmsim/source_modelling',
    'nshmdb @ git+https://github.com/ucgmsim/NSHM2022DB@source_modelling',
    'flask',
    'numpy',
    'shapely',
    'folium',
    'geopandas',
    'streamlit',
    'streamlit-folium'
]

[tool.ruff.lint]
extend-select = [
    # isort imports
    "I",
    # Use r'\s+' rather than '\s+'
    "W605",
    # All the naming errors, like using camel case for function names.
    "N",
    # Missing docstrings in classes, methods, and functions
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    # Use f-string instead of a format call
    "UP032",
    # Standard library import is deprecated
    "UP035",
    # Missing function argument type-annotation
    "ANN001",
    # Using except without specifying an exception type to catch
    "BLE001",
]
ignore = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = [
    "source_modelling",
    "workflow",
    "pygmt_helper",
    "qcore",
    "empirical",
    "nshmdb",
    "IM_calculation",
    "mera",
]

[tool.ruff.lint.per-file-ignores]
# Ignore no docstring in __init__.py
"__init__.py" = ["D104"]
# Ignore docstring errors in tests folder
"tests/**.py" = ["D"]
